--- a/1.html
+++ b/1.html
@@ -10,8 +10,9 @@
 <body>
   <!-- <script src="./01.js"></script> -->
   <!-- <script src="./02.js"></script> -->
-  <script src="./03.js"></script>
+  <!-- <script src="./03.js"></script> -->
   <!-- <script src="./04.js"></script> -->
+  <script src="./test.js"></script>
 </body>
 
 </html>
